--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -60,7 +60,7 @@ outputs:
       host:
         - python ${{ python_min }}.*
         - pip
-        - scikit-build-core
+        - scikit-build-core >=0.11.2
         - tomlkit
       run:
         - python >=${{ python_min }}
